--- a/Movie Watchlist/index.html
+++ b/Movie Watchlist/index.html
@@ -18,7 +18,7 @@
     <!-- Social Media tags -->
     <meta property="og:title" content="Movie Watchlist">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chrisedeson.github.io/scrimba-homework/Movie Watchlist/index.html">
+    <meta property="og:url" content="https://chrisedeson.github.io/scrimba-homework/Movie%20Watchlist/index.html">
     <meta property="og:image" content="images/favicon.png">
     
     <!-- Google Fonts -->
