add background image

--- a/Oldagram/index.html
+++ b/Oldagram/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <img src="images/logo.png" class="logo" alt="Oldagram logo">
-        <img src="images/user-avatar.png" class="user-profile-img" alt="User profile picture">
+        <img src="images/user-avatar.jpg" class="user-profile-img" alt="User profile picture">
     </header>
     <main class="features">
         <section class="user-post-info">
