--- a/calculator/index.html
+++ b/calculator/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="An app that calculates basic arithemetic">
     <meta name="author" content="Christopher Edeson">
     <title>Chrisflex's Calculator</title>
-    <link rel="stylesheet" href="calculator.css">
-    <link rel="stylesheet" href="calculator-large.css">
-    <script src="calculator.js" defer></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="large.css">
+    <script src="index.js" defer></script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
