--- a/movie_watchlist/index.html
+++ b/movie_watchlist/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A simple movie watchlist">
     <title>Home | Movie WatchList</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    <script src="index.js" type="module"></script>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
