--- a/movie_watchlist/watchlist.html
+++ b/movie_watchlist/watchlist.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A simple movie watchlist">
     <title>My WatchList | Movie WatchList</title>
     <link rel="stylesheet" href="index.css">
-    <script src="watchlist.js" defer></script>
+    <script src="watchlist.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
