Add Open Graph meta tags and update favicon links

--- a/pollyglot/index.html
+++ b/pollyglot/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="PollyGlot is a language learning app that helps you learn new languages by translating words and phrases in real-time." />
     <meta name="keywords" content="language, learning, translation, words, phrases, real-time" />
     <meta name="author" content="Christopher Edeson" />
     <title>PollyGlot</title>
+
+    <!-- Open Graph for Facebook -->
+    <meta property="og:title" content="PollyGlot" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pollyglot-translate.netlify.app/" />
+    <meta property="og:image" content="https://pollyglot-translate.netlify.app//parrot.png" />
+    <meta name="description" content="PollyGlot is a language learning app that helps you learn new languages by translating words and phrases in real-time." />
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="src/assets/favicon/site.webmanifest">
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil:opsz,wght@10..72,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
